--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "scripts": {
     "lint": "tslint -t stylish -c tslint.json 'lib/**/*.ts'",
     "prebuild": "npm run lint",
-    "build": "rollup -c rollup.config.umd.js && rollup -c rollup.config.es6.js",
+    "build-es6": "rollup -c rollup.config.es6.js",
+    "build-umd": "rollup -c rollup.config.umd.js",
+    "build": "npm run build-es6 && npm run build-umd",
     "pretest": "rollup -c rollup.config.test.js",
     "test": "mocha build/test-bundle.js",
     "prepublish": "npm run build && npm test"
@@ -39,6 +41,6 @@
     "typescript": "^2.4.2"
   },
   "dependencies": {
-    "localforage": ">=1.5.1"
+    "localforage": "^1.5.1"
   }
 }
